[gd_scene load_steps=4 format=2]

[ext_resource path="res://ContactTile.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 25 )

[node name="ContactTile" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -30 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="DisappearTimer" type="Timer" parent="."]
one_shot = true

[node name="ReappearTimer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timeout"]
[connection signal="timeout" from="ReappearTimer" to="." method="_on_ReappearTimer_timeout"]
